@@ -1,3 +1,12 @@
+Mon Mar 04 13:04:23 2005  Gan Deng  <gan.deng@vanderbilt.edu>
+
+	* Config_Handlers/Config_Handlers.mpc
+	* Config_Handlers/Deployment.hpp
+	* Config_Handlers/test.cpp
+
+	  Fixed compilation errors and linking erros and warnings
+	  for the XSC basec config handlers and test.
+
 Fri Mar  4 11:13:23 2005  Nanbor Wang  <nanbor@cs.wustl.edu>
 
 	* ciao/Container_Impl.cpp:
